--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
 h1 {
   font-family: "Oswald", sans-serif;
 }
