--- a/style.css
+++ b/style.css
@@ -12,8 +12,14 @@ img {
 
 h1 {
   font-family: "Oswald", sans-serif;
+  color: #fefae0;
 }
 
 p {
   font-family: "Lora", serif;
+  color: #fefae0;
+}
+
+body {
+  background-color: #283618;
 }
