--- a/style.css
+++ b/style.css
@@ -23,3 +23,53 @@ p {
 body {
   background-color: #283618;
 }
+
+/*BURGERMENU*/
+
+.navbar {
+  background-color: #283618;
+  color: #fefae0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+}
+
+.burger-menu {
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+.bar {
+  width: 25px;
+  height: 3px;
+  background-color: #fefae0;
+  margin: 3px 0;
+  transition: transform 0.3s ease-in-out;
+}
+
+.menu {
+  list-style-type: none;
+  display: none;
+  position: absolute;
+  top: 60px;
+  left: 0;
+  background-color: #283618;
+  width: 50%;
+  z-index: 2;
+}
+
+.menu.show {
+  display: flex;
+  flex-direction: column;
+}
+
+.menu li {
+  margin: 10px 20px;
+}
+
+.menu li a {
+  text-decoration: none;
+  color: #fefae0;
+}
