--- a/deciduous.css
+++ b/deciduous.css
@@ -54,3 +54,72 @@ a {
   width: 80px;
   height: 40px;
 }
+
+.plants_by {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+/*PLANTER*/
+
+.plants_by_1 {
+  position: relative;
+  margin: 10px;
+}
+
+.des {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  padding: 10px;
+  z-index: 1; /* Placer teksten over billedet */
+}
+
+.cate a,
+.des a {
+  font-family: "Oswald", sans-serif;
+}
+
+.des a {
+  font-size: 30px;
+}
+
+/*FOOTER*/
+
+footer {
+  background-color: #606c38;
+  opacity: 40%;
+}
+
+.partner {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+}
+
+.partner_pic {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.project {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+}
+
+.partner img {
+  width: 55%;
+}
+
+.project img {
+  width: 15%;
+  align-content: center;
+}
+
+.partner p,
+.project p {
+  text-align: center;
+}
