--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ p {
 
 body {
   background-color: #283618;
+  margin: 10px;
 }
 
 /*BURGERMENU*/
@@ -58,7 +59,7 @@ body {
   left: 0;
   background-color: #283618;
   width: 50%;
-  z-index: 2;
+  z-index: 10;
 }
 
 .menu.show {
