--- a/plant.css
+++ b/plant.css
@@ -106,9 +106,12 @@ h1 {
   background-color: #606c38;
   color: #ffffff;
   border-radius: 60px;
+  border-color: #ffffff;
   width: 110px;
   height: 40px;
   text-align: center;
+  font-family: "Oswald", sans-serif;
+
 }
 
 .buttons {
@@ -117,6 +120,7 @@ h1 {
   place-items: center;
   margin-top: 30px;
   margin-bottom: 40px;
+
 }
 
 .fact,
