--- a/contact.css
+++ b/contact.css
@@ -7,7 +7,12 @@ body {
   background-color: #283618;
   color: white;
   font-family: "Oswald", sans-serif;
+  background-image: url("img/blok.webp");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
+
 label,
 input,
 textarea,
