--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ img {
 }
 
 h1,
-h2 {
+h2,
+header {
   font-family: "Oswald", sans-serif;
   color: #fefae0;
 }
@@ -82,6 +83,7 @@ footer {
   background-color: #606c38;
   opacity: 40%;
   align-items: center;
+  margin: 0;
 }
 
 .project {
@@ -134,4 +136,50 @@ footer {
 
 .show {
   display: block;
+}
+
+@media (min-width: 800px) {
+  footer {
+    display: flex;
+    justify-content: center; /* Centrer indholdet horisontalt */
+    align-items: center; /* Centrer indholdet vertikalt */
+    /* Tilpas eventuelt yderligere styling efter behov */
+  }
+
+  .foot img {
+    width: 20%;
+    /* Tilpas eventuel yderligere styling efter behov */
+  }
+
+  .project,
+  .partner,
+  .social {
+    text-align: center; /* Centrer indholdet inden i .project og .partner */
+    /* Tilpas eventuel yderligere styling efter behov */
+  }
+
+  .partner_pic,
+  .partner_pic_2 {
+    display: flex;
+    justify-content: center; /* Centrer indholdet horisontalt */
+    /* Tilpas eventuel yderligere styling efter behov */
+    gap: 10px;
+  }
+
+  .partner_pic img {
+    width: 10%;
+  }
+
+  .burger-menu {
+    display: none;
+  }
+
+  .menu {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end; /* Center menuen vandret */
+    width: 1430px;
+    font-size: 20px;
+    gap: 20px;
+  }
 }
