--- a/plant.css
+++ b/plant.css
@@ -2,82 +2,73 @@ section {
   overflow: hidden;
 }
 
-.grid1{
+.grid1 {
   display: grid;
   grid-template-columns: 1fr;
   gap: 20px;
   margin-top: 30px;
   margin-bottom: 20vw;
-  padding-left:20px ;
+  padding-left: 20px;
   padding-right: 20px;
-  
 }
 
-.grid_maintext{
+.grid_maintext {
   display: grid;
   grid-template-columns: 1fr;
   gap: 30px;
   padding-left: 13vw;
   padding-right: 13vw;
   margin-bottom: 80px;
-
 }
 
-.grid1-1-1-1{
+.grid1-1-1-1 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 30px;
   text-align: center;
-
 }
 
-
-.dot{
+.dot {
   grid-area: dot;
   width: 100%;
   height: 100%;
   object-fit: cover;
-
-
 }
 
-.month-name{
- border: 2px solid #606C38; 
-  padding: 10px; 
+.month-name {
+  border: 2px solid #606c38;
+  padding: 10px;
   display: inline-block;
-  margin: 10px; 
-  border-radius: 50%; 
+  margin: 10px;
+  border-radius: 50%;
   width: 150px; /* Set width and height to the same value */
   height: 150px;
   padding-top: 4vw;
-  background-color: #606C38; /* Red color */
+  background-color: #606c38; /* Red color */
   justify-content: center;
   align-content: center;
   align-self: center;
   justify-content: center;
-
-  
 }
 
 .foreground {
   position: absolute;
   top: 10vw;
-  left:20vw;
-  right:20vw;
+  left: 20vw;
+  right: 20vw;
   z-index: 1;
   width: 55vw;
 }
 
-#profile_img{
+#profile_img {
   width: 40%;
-justify-self: center;
-z-index: 2;
+  justify-self: center;
+  z-index: 2;
 }
 
- .name {
-  z-index: 1;
-  
-} 
+.name {
+  z-index: 100;
+}
 
 .foreground_2 {
   position: absolute;
@@ -111,7 +102,6 @@ h1 {
   height: 40px;
   text-align: center;
   font-family: "Oswald", sans-serif;
-
 }
 
 .buttons {
@@ -120,7 +110,6 @@ h1 {
   place-items: center;
   margin-top: 30px;
   margin-bottom: 40px;
-
 }
 
 .fact,
@@ -142,138 +131,119 @@ h1 {
   gap: 20px;
 }
 
-
 @media screen and (max-width: 800px) {
-  .grid1-1-1-1{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  .grid1-1-1-1 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
   }
-
-
 }
 @media screen and (max-width: 400px) {
-  .grid1-1-1-1{
-  display: grid;
-  grid-template-columns: 1fr;
+  .grid1-1-1-1 {
+    display: grid;
+    grid-template-columns: 1fr;
   }
-
-
 }
 @media screen and (min-width: 300px) {
- 
-  .foreground{
+  .foreground {
     width: 65%;
-    left:20vw;
-  right:20vw;
-  aspect-ratio: 1/1;
-
+    left: 20vw;
+    right: 20vw;
+    aspect-ratio: 1/1;
   }
-  #profile_img{
+  #profile_img {
     width: 35%;
     border-radius: 50%;
   }
 }
 
 @media screen and (min-width: 600px) {
-  .foreground{
+  .foreground {
     width: 50%;
-    left:26vw;
-    right:20vw;
-  aspect-ratio: 1/1;
+    left: 26vw;
+    right: 20vw;
+    aspect-ratio: 1/1;
   }
-  #profile_img{
+  #profile_img {
     width: 30%;
   }
-    .grid1{
-  margin-bottom: 20vw; 
+  .grid1 {
+    margin-bottom: 20vw;
+  }
 }
-
-
-}
-
 
 @media screen and (min-width: 800px) {
-  .foreground{
+  .foreground {
     width: 48%;
-    left:26vw;
-    right:20vw;
-  aspect-ratio: 1/1;
+    left: 26vw;
+    right: 20vw;
+    aspect-ratio: 1/1;
   }
-  #profile_img{
+  #profile_img {
     width: 30%;
   }
-    .grid1{
-  margin-bottom: 20vw; 
+  .grid1 {
+    margin-bottom: 20vw;
+  }
 }
-}
-
 
 @media screen and (min-width: 900px) {
-  .foreground{
-     width: 50%;
-    left:22vw;
-    right:22vw;
-  aspect-ratio: 1/1;
+  .foreground {
+    width: 50%;
+    left: 22vw;
+    right: 22vw;
+    aspect-ratio: 1/1;
   }
-  #profile_img{
+  #profile_img {
     width: 28%;
   }
-  .grid1{
-  margin-bottom: 20vw; 
-}
+  .grid1 {
+    margin-bottom: 20vw;
+  }
 }
 
 @media screen and (min-width: 1000px) {
-  .foreground{
-     width: 40%;
-    left:28vw;
-    right:25vw;
-  aspect-ratio: 1/1;
+  .foreground {
+    width: 40%;
+    left: 28vw;
+    right: 25vw;
+    aspect-ratio: 1/1;
   }
-  #profile_img{
+  #profile_img {
     width: 23%;
   }
-   .grid1{
-  margin-bottom: 10vw;
- 
-  
+  .grid1 {
+    margin-bottom: 10vw;
+  }
 }
-}
-
 
 @media screen and (min-width: 1100px) {
-  .foreground{
-     width: 37%;
-    left:32vw;
-    right:28vw;
+  .foreground {
+    width: 37%;
+    left: 32vw;
+    right: 28vw;
     top: 8vw;
-  aspect-ratio: 1/1;
+    aspect-ratio: 1/1;
   }
-  #profile_img{
+  #profile_img {
     width: 20%;
   }
-  .grid1{
-  margin-bottom: 10vw;
- 
-  
-}
+  .grid1 {
+    margin-bottom: 10vw;
+  }
 }
 
 @media screen and (min-width: 1300px) {
-  .foreground{
-     width: 30%;
-    left:34vw;
-    right:28vw;
+  .foreground {
+    width: 30%;
+    left: 34vw;
+    right: 28vw;
     top: 6vw;
-  aspect-ratio: 1/1;
+    aspect-ratio: 1/1;
   }
-  #profile_img{
+  #profile_img {
     width: 17%;
   }
-  .grid1{
-  margin-bottom: 6vw;
- 
-  
+  .grid1 {
+    margin-bottom: 6vw;
+  }
 }
-}
-
