--- a/contact.css
+++ b/contact.css
@@ -1,14 +1,12 @@
-body {
+main {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 60vh;
   margin: 0;
   background-color: #283618;
-  color: white;
-  font-family: "Oswald", sans-serif;
   background-image: url("img/blok.webp");
-  background-size: cover;
+  background-size: 75%;
   background-position: center;
   background-repeat: no-repeat;
 }
@@ -19,6 +17,8 @@ textarea,
 select,
 button {
   display: block;
+  font-family: "Lora", serif;
+  color: #fefae0;
 }
 form {
   display: grid;
@@ -30,9 +30,23 @@ form {
 .indsend_indhold {
   display: grid;
   gap: 3px;
-  width: 25rem;
-  margin: 5px;
+  width: 20rem;
 }
 h1 {
-  font-size: 1rem;
+  font-size: 2.5rem;
+  text-align: center;
+  font-family: "Oswald", sans-serif;
+}
+
+input#fornavn,
+input#efternavn,
+input#beskrivelse {
+  color: black;
+}
+
+@media (min-width: 800px) {
+  main {
+    height: 100vh;
+    background-size: 30%;
+  }
 }
