--- a/forside.css
+++ b/forside.css
@@ -39,9 +39,11 @@
   .lov_desk {
     display: block;
     height: 500px;
+    margin-top: 40px;
   }
 
   .forsideh1 {
-    top: -50px;
+    top: -70px;
+    font-size: 100px;
   }
 }
