--- a/plant.css
+++ b/plant.css
@@ -68,6 +68,8 @@ section {
 
 .name {
   z-index: 100;
+  font-size: 40px;
+  text-transform: uppercase;
 }
 
 .foreground_2 {
@@ -151,7 +153,7 @@ h1 {
     aspect-ratio: 1/1;
   }
   #profile_img {
-    width: 35%;
+    width: 65%;
     border-radius: 50%;
   }
 }
@@ -183,6 +185,10 @@ h1 {
   }
   .grid1 {
     margin-bottom: 20vw;
+  }
+
+  .name {
+    margin-top: 60px;
   }
 }
 
