--- a/deciduous.css
+++ b/deciduous.css
@@ -1,6 +1,6 @@
-.section {
+/* .section {
   position: relative;
-}
+} */
 
 .background {
   width: 100%;
@@ -23,7 +23,7 @@
 
 .foreground_3 {
   position: relative;
-  z-index: 2;
+  /* z-index: 2; */
   width: 250px;
   top: -581px;
   left: 112px;
@@ -59,6 +59,7 @@ a {
   justify-content: space-around;
   text-align: center;
   margin-top: 20px;
+  margin-bottom: 35px;
 }
 .plants_selector {
   text-align: center;
@@ -107,6 +108,7 @@ a {
   display: none;
 }
 
+
 @media (min-width: 800px) {
   .background {
     display: block;
@@ -150,7 +152,7 @@ a {
 
   .foreground_3 {
     position: absolute;
-    z-index: 2;
+    /* z-index: 2; */
     width: 350px;
     top: 281px;
     left: 1075px;
@@ -186,6 +188,7 @@ a {
   .plants_by .col_2 {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    margin-bottom: 30px;
   }
 
   .plants_by_1 {
