--- a/plant.css
+++ b/plant.css
@@ -95,7 +95,7 @@ h1 {
   position: absolute;
   top: 12vw;
   left: -30px;
-  z-index: 2;
+  /* z-index: 2; */
   width: 20vw;
   transform: rotate(45deg);
 }
