--- a/contact.css
+++ b/contact.css
@@ -37,6 +37,9 @@ h1 {
   text-align: center;
   font-family: "Oswald", sans-serif;
 }
+#submit {
+  color: black;
+}
 
 input#fornavn,
 input#efternavn,
