--- a/deciduous.css
+++ b/deciduous.css
@@ -86,13 +86,8 @@ a {
 }
 
 .des {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-  padding: 10px;
-  z-index: 1; /* Placer teksten over billedet */
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 .cate a,
@@ -108,6 +103,10 @@ a {
   display: none;
 }
 
+.billede_prøve {
+  border-radius: 50%;
+  height: 160px;
+}
 
 @media (min-width: 800px) {
   .background {
