--- a/plant.css
+++ b/plant.css
@@ -233,7 +233,7 @@ h1 {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 30px;
-    text-align: center;
+    place-items: center;
   }
 }
 
