--- a/deciduous.css
+++ b/deciduous.css
@@ -200,6 +200,13 @@ a {
     align-items: center; /* Centrer lodret */
   }
 
+  .billede_prøve:hover {
+    box-shadow: 7px 7px 5px 0px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 7px 7px 5px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 7px 7px 5px 0px rgba(0, 0, 0, 0.75);
+    transform: scale(1.1);
+  }
+
   .planter {
     display: flex;
     justify-content: center;
