--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ main {
 .menu.show {
   display: flex;
   flex-direction: column;
-  z-index: 200  ;
+  z-index: 200;
 }
 
 .menu li {
@@ -194,8 +194,7 @@ footer {
   .menu {
     display: flex;
     flex-direction: row;
-    justify-content: flex-end; /* Center menuen vandret */
-    width: 1430px;
+    justify-content: flex-start; /* Center menuen vandret */
     font-size: 20px;
     gap: 20px;
   }
