rettelse i burger-menu og indsat logo

--- a/style.css
+++ b/style.css
@@ -58,7 +58,6 @@ main {
 .menu {
   list-style-type: none;
   display: none;
-  position: absolute;
   top: 60px;
   left: 0;
   background-color: #283618;
@@ -70,8 +69,12 @@ main {
 .menu.show {
   display: flex;
   flex-direction: column;
-  z-index: 200  ;
+  z-index: 200;
+  position: absolute;
+  margin-top: -10px;
 }
+
+
 
 .menu li {
   margin: 10px 20px;
@@ -155,6 +158,13 @@ footer {
   font-size: 16px;
 }
 
+#logo{
+  width: 110px;
+  height: auto;
+  margin-right: auto; /* Pushes the logo to the left */
+
+}
+
 @media (min-width: 800px) {
   footer {
     display: flex;
@@ -191,6 +201,8 @@ footer {
     display: none;
   }
 
+
+
   .menu {
     display: flex;
     flex-direction: row;
@@ -198,5 +210,11 @@ footer {
     width: 1430px;
     font-size: 20px;
     gap: 20px;
+  }
+  
+}
+@media (max-width: 800px) {
+  #logo {
+    display: none;
   }
 }
