--- a/forside.css
+++ b/forside.css
@@ -1,25 +1,38 @@
+
 .forsideh2 {
   text-align: center;
   text-transform: uppercase;
-  font-size: 2.5rem;
+  font-size: 4vw;
 }
 
 .forsideh1 {
   text-align: center;
-  font-size: 4rem;
+  font-size: 10vw;
   z-index: 99;
+  position: absolute;
+  top: 17vw;
+  left: 34vw;
+  justify-self: center;
 }
 
 .skove {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  margin-top: 50px;
-  gap: 10px;
+  margin-top: 30px;
   padding-bottom: 80px;
 }
 
-.lov_desk {
-  display: none;
+.skove :first-child{
+  justify-self: center;
+}
+
+.skove :nth-child(2){
+  justify-self: center;
+}
+.skove img{
+  width: 25vw;
+  border-radius: 50%;
+
 }
 
 .foreground_forside {
@@ -30,28 +43,34 @@
   left: 85px;
 }
 
-@media (min-width: 800px) {
-  .skove {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    margin-top: 100px;
-    gap: 20px;
-    padding: 0px 300px 103px 300px;
-  }
+.løvskov{
+  width: 96vw; /* 100% of the viewport width */
+  height: 40vw;
+  padding-left: 3vw;
+  padding-right: 3vw;
+  object-fit: cover;
+  margin-bottom: 30px;
 
-  .løvskov {
-    display: none;
-  }
-
-  .lov_desk {
-    display: block;
-    height: 500px;
-    margin-top: 40px;
-  }
-
-  .forsideh1 {
-    position: relative;
-    top: -344px;
-    font-size: 10rem;
-  }
 }
+
+ @media (min-width: 800px) {
+ .skove img{
+  width: 20vw;
+  border-radius: 50%;
+
+}
+.skove {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin-top: 30px;
+  padding-bottom: 80px;
+  justify-items: center;
+  margin-left: 200px;
+  margin-right: 200px;
+}
+
+} 
+
+
+
+
