--- a/style.css
+++ b/style.css
@@ -74,8 +74,6 @@ main {
   margin-top: -10px;
 }
 
-
-
 .menu li {
   margin: 10px 20px;
 }
@@ -158,11 +156,10 @@ footer {
   font-size: 16px;
 }
 
-#logo{
+#logo {
   width: 110px;
   height: auto;
   margin-right: auto; /* Pushes the logo to the left */
-
 }
 
 @media (min-width: 800px) {
@@ -201,16 +198,20 @@ footer {
     display: none;
   }
 
-
-
   .menu {
     display: flex;
     flex-direction: row;
     justify-content: flex-start; /* Center menuen vandret */
     font-size: 20px;
-    gap: 20px;
   }
-  
+
+  .navbar {
+    background-color: #283618;
+    color: #fefae0;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
 }
 @media (max-width: 800px) {
   #logo {
