--- a/forside.css
+++ b/forside.css
@@ -32,4 +32,9 @@
     gap: 20px;
     padding: 0px 300px 0px 300px;
   }
+
+  .skove_forside:hover {
+    transform: scale(1.05);
+    cursor: pointer;
+  }
 }
